[package]
name = "mcp2517fd"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "~0.13"
embedded-hal = {features = ["unproven"], version = "~0.2"}
nb = "~0.1"
